<resources>
    <string name="app_name">views</string>
    <string name="photos">6 Photos</string>
    <string name="price">$735</string>
    <string name="stock">Stock hanya 7 buah</string>
    <string name="desc_text">Google officially announced its much-anticipated Pixel phones; the Pixel and Pixel XL, on October 4. We attended Google’s London UK event, mirroring the main one taking place in San Francisco, US, where the firm unwrapped the new Android 7.1 Nougat devices which will apparently usurp Google’s long-standing Nexus series.</string>
    <string name="spesific">Spesifikasi</string>
    <string name="display">Display</string>
    <string name="desc_display">5.0 inches\nFHD AMOLED at 441ppi\n2.5D Corning® Gorilla® Glass 4</string>
    <string name="size">Size</string>
    <string name="desc_size">5.6 x 2.7 x 0.2 ~ 0.3 inches 143.8 x 69.5 x 7.3 ~ 8.5 mm</string>
    <string name="battery">Battery</string>
    <string name="desc_battery">2,770 mAh battery\nStandby time (LTE): up to 19 days\nTalk time (3g/WCDMA): up to 26 hours\nInternet use time (Wi-Fi): up to 13 hours\nInternet use time (LTE): up to 13 hours\nVideo playback: up to 13 hours\nAudio playback (via headset): up to 110 hours\nFast charging: up to 7 hours of use from only 15 minutes of charging</string>
    <string name="sell">Dijual oleh</string>
    <string name="seller">Evelyna Azizah</string>
    <string name="buy">Beli</string>
</resources>